--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Tennessee State Parks Open Data Portal HELLO</title>
+<title>Tennessee State Parks Open Data Portal</title>
 <style type="text/css">
-    .card {
+
+	body {
+		background-color: lightblue;
+	}
+
+    .link1 {
         width: 130px;
         height: 195px;
         background: url("https://i.ibb.co/xmG4b81/walk.png") no-repeat;
         display: inline-block;
     }
-    .card:hover {
+    .link1:hover {
         background: url("https://i.ibb.co/GVX36Db/hiker-1.png") no-repeat;
     }
+
 </style>
 </head>
 <body>
-    <div class="card"></div>
+    <div class="link1"></div>
 </body>
 </html>
