--- a/index.html
+++ b/index.html
@@ -7,20 +7,41 @@
 	body {
 		background-color: lightblue;
 	}
-
-    .link1 {
-        width: 130px;
-        height: 195px;
-        background: url("https://i.ibb.co/xmG4b81/walk.png") no-repeat;
+    .data {
+        width: 118px;
+        height: 187px;
+        background: url("https://i.ibb.co/v154pJQ/data.png") no-repeat;
         display: inline-block;
     }
-    .link1:hover {
-        background: url("https://i.ibb.co/GVX36Db/hiker-1.png") no-repeat;
+    .data:hover {
+        background: url("https://i.ibb.co/NNtb7zQ/data-hover.png") no-repeat;
     }
-
+	.webapps {
+        width: 117px;
+        height: 187px;
+        background: url("https://i.ibb.co/b54yTbs/webapps.png") no-repeat;
+        display: inline-block;
+    }
+    .data:hover {
+        background: url("https://i.ibb.co/y6mct23/webapps-hover.png") no-repeat;
+    }
+	.resources {
+        width: 119px;
+        height: 187px;
+        background: url("https://i.ibb.co/6XN9gzx/resources.png") no-repeat;
+        display: inline-block;
+    }
+    .resources:hover {
+        background: url("https://i.ibb.co/C69mDdH/resources-hover.png") no-repeat;
+	}
+	
 </style>
 </head>
 <body>
-    <div class="link1"></div>
+
+<center>
+	<div class="data"></div><div class="webapps"></div><div class="resources"></div>
+</center>
+
 </body>
 </html>
