--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         height: 187px;
         background: url("https://i.ibb.co/v154pJQ/data.png") no-repeat;
         display: inline-block;
+		padding-right: 50px;
     }
     .data:hover {
         background: url("https://i.ibb.co/NNtb7zQ/data-hover.png") no-repeat;
@@ -21,8 +22,9 @@
         height: 187px;
         background: url("https://i.ibb.co/b54yTbs/webapps.png") no-repeat;
         display: inline-block;
+		padding-right: 50px;
     }
-    .data:hover {
+    .webapps:hover {
         background: url("https://i.ibb.co/y6mct23/webapps-hover.png") no-repeat;
     }
 	.resources {
