--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <title>Tennessee State Parks Open Data Portal</title>
 <style type="text/css">
 
-	body {
-		background-color: lightblue;
-	}
     .data {
         width: 118px;
         height: 187px;
         background: url("https://i.ibb.co/v154pJQ/data.png") no-repeat;
         display: inline-block;
-		padding-right: 50px;
+		padding-right: 70px;
     }
     .data:hover {
         background: url("https://i.ibb.co/NNtb7zQ/data-hover.png") no-repeat;
@@ -22,7 +19,7 @@
         height: 187px;
         background: url("https://i.ibb.co/b54yTbs/webapps.png") no-repeat;
         display: inline-block;
-		padding-right: 50px;
+		padding-right: 70px;
     }
     .webapps:hover {
         background: url("https://i.ibb.co/y6mct23/webapps-hover.png") no-repeat;
@@ -42,7 +39,7 @@
 <body>
 
 <center>
-	<div class="data"></div><div class="webapps"></div><div class="resources"></div>
+	<div class="data"><a href="/pages/data"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="webapps"><a href="/pages/apps"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="resources"><a href="/pages/resources"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div>
 </center>
 
 </body>
