--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
 <center>
-	<div class="data"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/data"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="webapps"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/apps"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="resources"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/resources"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div>
+	<div class="data"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/data" target="_parent"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="webapps"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/apps" target="_parent"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div><div class="resources"><a href="https://tnstateparks-tdec.opendata.arcgis.com/pages/resources" target="_parent"><img src="https://i.ibb.co/tLpXwwf/invisible.png"></a></div>
 </center>
 
 </body>
