--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     .data {
         width: 117px;
         height: 187px;
-        background: url("https://i.ibb.co/YBKnjJD/data.png") no-repeat;
+        background: url("https://i.ibb.co/Dp7XMBT/data.png") no-repeat;
         display: inline-block;
 		padding-right: 70px;
     }
     .data:hover {
-        background: url("https://i.ibb.co/WzT9jBF/data-hover.png") no-repeat;
+        background: url("https://i.ibb.co/gmMR36t/data-hover.png") no-repeat;
     }
 	.webapps {
         width: 117px;
